// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HoverTooltip > opens on hover and matches snapshot 1`] = `
<div>
  <button
    aria-describedby="react-aria-:r7:"
    aria-label="Show info tooltip"
    class="cursor-default"
    data-hovered="true"
    data-rac=""
    data-react-aria-pressable="true"
    id="react-aria-:r8:"
    tabindex="0"
    type="button"
  >
    <span>
      Hover trigger
    </span>
  </button>
</div>
`;

exports[`Tooltip > opens on click and matches snapshot 1`] = `
<div
  inert=""
>
  <button
    aria-controls="react-aria-:r0:"
    aria-expanded="true"
    aria-label="Show info tooltip"
    class="cursor-pointer"
    data-pressed="true"
    data-rac=""
    data-react-aria-pressable="true"
    id="react-aria-:r1:"
    tabindex="0"
    type="button"
  >
    <span>
      Tooltip trigger
    </span>
  </button>
</div>
`;
